--- a/Policies.html
+++ b/Policies.html
@@ -18,12 +18,19 @@
 		<p><br>You must be referred here from our group #foodyC. It is good to hear that you are a part of our amazing community. We are thinking to make this community even larger. To grow it more we are designing a WhatsApp group. Your participation is necessary. Please send us your information so that we can create an interactive community. </p>
 	</div>
 
-	<div class="form_FC">
-<center>
-	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUPFR6L_c2oor_NuQBG_vuwjLEuh6ZRlLJp2qRGSel-UZmpg/viewform?embedded=true" width="700" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-</center>
+	<div class="Policies">
+	<p class="Hd_P">Group Policies </p>
+	<p class="maintext"><br>1. Only foodyC members are allowed to be incorporated in this group.<br>2. No personal Chatting should be tolerated. <br>3. Only invited persons are allowed inside the group.<br>4. Individual members are not allowed to add other persons in the group.<br>5. NO SPAMMING.<br>6. No unauthorised file sharing.<br>7. No unauthorised Link sharing.<br>8. NO HARRASMENT.<br>9. Never use explicit/violent comments towards any members.<br>10. All rules explained above should be thoroughly followed.</p>
+
+	<p class="Hd_P">In case of violation of any group rules </p>
+	<p class="maintext">If all/any rules/group policies are violated by any of the members of the groups, Then you are requested to complain here. Just take a screenshot and upload here with any/all complains, mention the person(s)'s name(s) and WhatsApp Number(s) and describe in few words of his/her action. We will take instant action(s). <br>We are trying to make this community a safe and well lit food heaven, where people can freely talk and share about their personal opinion focused around only food and food related place(s), method(s), etc. No cultural, racial or sexual discrimination should not be tolerated in this group at any cost. So all the members are requested to maintain and follow all the group rules that are mentioned above.</p>
+	<p style="text-align: center;"><br><br>IF YOU HAVE ANY COMPLAIN AGAINST ANY MEMBER(S) OF THE GROUP THEN PROCCED FURTHER, SUBMIT YOUR COMPLAIN NOW.</p> 
 </div>
-<a style="text-decoration: none;" href="Policies.html"><div class="button"><p>READ OUR GROUP POLICIES</p></div></a>
+
+<a style="text-decoration: none;" href="https://forms.gle/458q1gb6grCbc8uX6"><div class="button"><p>I have a complain, I want to submit now</p></div></a>
+
+<a style="text-decoration: none;" href="index.html"><div class="button-back"><p>No, Go back</p></div></a>
+
 <div class="text_btm">
 	<p style="text-align: justify; font-family: 'Alata', sans-serif;">A real life couple Titas and Sukanya.In quest for good foods.Review, recommendations and visiting new restaurants.Discovering budget foods. Good food what everyone like. Titas and Sukanya in a journey for discovering budget good food in local restaurants. Reviewing them and recommending to others as well.<br><br><b>Email: foodycouple0@gmail.com</b><br><br>
 	<b>© Titas Mallick & Sukanya Saha</b><br>ALL PERSONAL INFORMATION PROVIDED IN THIS PAGE ARE COMPLETLY SECURE.<br> a CREATIVEGUN project.</p>
