sob thik kora holo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUPFR6L_c2oor_NuQBG_vuwjLEuh6ZRlLJp2qRGSel-UZmpg/viewform?embedded=true" width="700" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </center>
 </div>
-<a style="text-decoration: none;" href="Policies.html"><div class="button"><p>READ OUR GROUP POLICIES</p></div></a>
+<a style="text-decoration: none;" href="Policies.html"><div class="button-index"><p>READ OUR GROUP POLICIES</p></div></a>
 <div class="text_btm">
 	<p style="text-align: justify; font-family: 'Alata', sans-serif;">A real life couple Titas and Sukanya.In quest for good foods.Review, recommendations and visiting new restaurants.Discovering budget foods. Good food what everyone like. Titas and Sukanya in a journey for discovering budget good food in local restaurants. Reviewing them and recommending to others as well.<br><br><b>Email: foodycouple0@gmail.com</b><br><br>
 	<b>© Titas Mallick & Sukanya Saha</b><br>ALL PERSONAL INFORMATION PROVIDED IN THIS PAGE ARE COMPLETLY SECURE.<br> a CREATIVEGUN project.</p>
