--- a/home.html
+++ b/home.html
@@ -4,12 +4,29 @@
 	<title>Foody Couple</title>
 	<link rel="stylesheet" type="text/css" href="home.css"><link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
-	<link rel="icon" href="imge-08.jpg" type="image/jpg">
+	<link rel="icon" href="imge-08.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body background="bg.jpg">
+	<div class="main">
+
 	<div class="header">
-		<img class="head" src="head.png">
+		<a href="home.html"><img class="head" src="head.png"></a>
 	</div>
+	<div class="text_btm">
+	<p style="text-align: justify; font-family: 'Alata', sans-serif;">A real life couple Titas and Sukanya. In quest for good foods.Review, recommendations and visiting new restaurants.Discovering budget foods. Good food what everyone like. Titas and Sukanya in a journey for discovering budget good food in local restaurants. Reviewing them and recommending to others as well.<br><br><b>Email: foodycouple0@gmail.com</b><br><br>
+	<b>© Titas Mallick & Sukanya Saha</b><br>ALL PERSONAL INFORMATION PROVIDED IN THIS PAGE ARE COMPLETLY SECURE.<br> a CREATIVEGUN project.</p>
+	<div class="box_sig">
+	<img class="sig" src="sigSuk.svg">
+	<a href="https://titasmallick.github.io/"><img class="sig" src="sigTitas.svg"></a>
+
+</div>
+</div>	
+<!-- <div class="links">
+	<a href="https://www.facebook.com/foodycouple0/"><img src="imge-02.png"></a>
+	<a href="https://www.facebook.com/groups/foodyC"><img src="imge-03.png"></a>
+	<a href="https://g.page/foody-couple"><img src="imge-04.png"></a>
+	<a href="https://www.instagram.com/foody.couple/"><img src="imge-05.png"></a>
+</div> -->
 </body>
 </html>
