--- a/home.html
+++ b/home.html
@@ -22,11 +22,11 @@
 
 </div>
 </div>	
-<!-- <div class="links">
+ <div class="links">
 	<a href="https://www.facebook.com/foodycouple0/"><img src="imge-02.png"></a>
 	<a href="https://www.facebook.com/groups/foodyC"><img src="imge-03.png"></a>
 	<a href="https://g.page/foody-couple"><img src="imge-04.png"></a>
 	<a href="https://www.instagram.com/foody.couple/"><img src="imge-05.png"></a>
-</div> -->
+</div> 
 </body>
 </html>
