--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 	<div class="box_1"></div>
 	<div class="logo_text">
 		<div class="box_3">
-		<a href="home.html"><img alt="foodyC logo" class="logo" src="logo.png"></a>
+		<a href="index.html"><img alt="foodyC logo" class="logo" src="logo.png"></a>
 		<!-- <h1>#foodyC</h1>
  -->	</div>
 		<p><br>You must be referred here from our group #foodyC. It is good to hear that you are a part of our amazing community. We are thinking to make this community even larger. To grow it more we are designing a WhatsApp group. Your participation is necessary. Please send us your information so that we can create an interactive community. </p>
