--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="main">
 
 	<div class="header">
-		<a href="home.html"><img class="head" src="head.png"></a>
+		<a href="index.html"><img class="head" src="head.png"></a>
 	</div>
 	<div class="text_btm">
 	<p style="text-align: justify; font-family: 'Alata', sans-serif;">A real life couple Titas and Sukanya. In quest for good foods.Review, recommendations and visiting new restaurants.Discovering budget foods. Good food what everyone like. Titas and Sukanya in a journey for discovering budget good food in local restaurants. Reviewing them and recommending to others as well.<br><br><b>Email: foodycouple0@gmail.com</b><br><br>
