--- a/index.html
+++ b/index.html
@@ -13,21 +13,186 @@
 	<div class="header">
 		<a href="index.html"><img class="head" src="head.png"></a>
 	</div>
+
+<div class="MainText">
+	<h1 style="text-align: center;">Welcome to Foody Couple/ foodyC</h1>
+
+
+<p><h3> Who We are?<br></h3>
+Foody Couple is an online community dedicated to good food. 
+
+Our tagline says "in 
+
+quest of good food". We are a food blogger, food vlogger, 
+
+food taster, reviewer. 
+
+We love everything related to food. We currently run a 
+
+facebook page and 
+
+a facebook group that is dedicated to foods only. We visit 
+
+different 
+
+restaurants or street food corners and try out different foods in 
+
+different 
+
+category and we do share them with you all.<br> 
+<h3> How did it was started?<br></h3>
+It was started with a basic initiation from Titas Mallick and 
+
+Sukanya Saha. They 
+
+are a real-life couple and they love to eat good food at all. 
+
+Sukaya loves to 
+
+take pictures of the food and loves to share them with the 
+
+world. Whereas Titas 
+
+was always been a content creator. Their thoughts were 
+
+merged. Foody Couple was 
+
+born. It was all started in September of 2017. It was 
+
+started as a very small 
+
+food community and it is still kept on growing.<br> 
+<h3>How do we operate?<br></h3>
+We visit different restaurants and street food corners and 
+
+try it ourselves. 
+
+Restaurant owners also invite us to try out their food. As a 
+
+group foodyC 
+
+the community now also accepts an opinion from our viewers. In our 
+
+Facebook group all 
+
+the community members also share their quest for good food 
+
+with the world. We 
+
+are still growing.<br>
+<h3>Any Plan?<br></h3>
+Yup, We have a lot of 
+
+plans. Like growing outside this online community. 
+
+Arranging our food festivals 
+
+and as well as creating our food services 
+
+and other stuff like that.<br>
+How 
+
+<h3>can you involve with Us?<br></h3>
+It is simple just go through our online community. 
+
+All links to our different 
+
+social media accounts are given in the bottom section 
+
+of this page. Join with 
+
+us. We need your help to make this community grow 
+
+larger.<br> 
+<h3>Any technical pieces of information?<br></h3>
+Yup, We do have a lot of 
+
+technical and legal statements written on our website 
+
+just find them on 
+
+different pages, read our group policies and join us.<br> 
+<h3>Relationship with CG?<br></h3>
+Foody Couple is directly affiliated to Creativegun Films. Visit their 
+
+site to 
+
+know more who they are.<br>
+<h3>Why Food?<br></h3>
+<b> Food doesn't have any 
+
+cultural or lingual barrier. Food is itself a religion. 
+
+That's why we love food. </b>
+
+The language of the food is its taste. We search for 
+
+that language. To 
+
+communicate globally and freely were no religion, no language 
+
+barriers nothing 
+
+else matters. So as a food fan this couple runs this community. 
+
+It is still 
+
+growing so bear with us.<br> 
+<h3>How to contact with foodyC/Foody Couple?<br></h3>
+It is 
+
+very simple. All the links are provided on this page in the bottom 
+
+section. Just 
+
+Visit them. You can also find our Whatsapp number and email address them. 
+
+Contact us through them. We respond real quick.<br><br> 
+<h2>So lets summerise it. 
+And don't forget to join us.</h2> </p>
+</div>
+
 	<div class="text_btm">
 	<p style="text-align: justify; font-family: 'Alata', sans-serif;">A real life couple Titas and Sukanya. In quest for good foods.Review, recommendations and visiting new restaurants.Discovering budget foods. Good food what everyone like. Titas and Sukanya in a journey for discovering budget good food in local restaurants. Reviewing them and recommending to others as well.<br><br><b>Email: foodycouple0@gmail.com</b><br><br>
 	<b>© Titas Mallick & Sukanya Saha</b><br>ALL PERSONAL INFORMATION PROVIDED IN THIS PAGE ARE COMPLETLY SECURE.<br> a CREATIVEGUN project.</p>
+
+
+<div class="WPBUTTON">
+	<a href="home.html"><p style="text-decoration: none; color: black;"> <b>Join Our WhatsApp Community</p></a>
+</div>
+
+<div class="Gallary">
+	<a href="https://pagefoodycouple.wordpress.com/"><p style="text-decoration: none; color: black;">Visit Our Gallary</p></a>
+</div>
+
+
+
+
 	<div class="box_sig">
-	<img class="sig" src="sigSuk.svg">
+	<a href="https://www.facebook.com/sukanya.saha.902"><img class="sig" src="sigSuk.svg"></a>
 	<a href="https://titasmallick.github.io/"><img class="sig" src="sigTitas.svg"></a>
 
 </div>
+
+<div>
+	<p style="font-family: 'Alata', sans-serif; font-size: 12px; text-align: center;">Check Us Out. Links Below</p>
+</div>
+
  <div class="links">
 	<a href="https://www.facebook.com/foodycouple0/"><img src="imge-02.png"></a>
 	<a href="https://www.facebook.com/groups/foodyC"><img src="imge-03.png"></a>
 	<a href="https://g.page/foody-couple"><img src="imge-04.png"></a>
 	<a href="https://www.instagram.com/foody.couple/"><img src="imge-05.png"></a>
 </div> 
+<div class="cg_logo">
+	<h1 style="margin: 0px 0px 0px; font-family: 'Alata', sans-serif; font-size: 20px; position: absolute;">affiliated to</h1>
+	<a href="https://creativegun.github.io/"><img align="right" style=" width: 30px; position: relative; " src="Symbol.png"></a>
+</div>
 </div>	
+<footer>
+	<p>
+		<b>Thanks, amazing human | FC2020 | CG</p>
+</footer>
 
 </body>
 </html>
