--- a/Policies.html
+++ b/Policies.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>foodyC</title>
-	<link rel="stylesheet" type="text/css" href="index.css"><link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="home.css"><link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-07.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
