--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@ Arranging our food festivals
 
 and as well as creating our food services 
 
-and other stuff like that.<br>
-How 
+and other stuff like that. We have already launched our YouTube Channel<br>
 
-<h3>can you involve with Us?<br></h3>
+<h3>How can you involve with Us?<br></h3>
 It is simple just go through our online community. 
 
 All links to our different 
@@ -165,6 +164,9 @@ And don't forget to join us.</h2> </p>
 	<a href="https://pagefoodycouple.wordpress.com/"><p style="text-decoration: none; color: black;">Visit Our Gallary</p></a>
 </div>
 
+<div class="WPBUTTON">
+	<a href="https://www.youtube.com/channel/UCnoYhzTk1VeSDbhEln-bERA"><p style="text-decoration: none; color: black;"> <b>Visit Our YouTube Channel</p></a>
+</div>
 
 
 
