--- a/mail.html
+++ b/mail.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test for mail</title>
+	<title>Visit now</title>
 </head>
+<link rel="icon" type="png" href="imge-08.png">
+
 <body>
 	<div>
-		<a href="https://foodyc.xyz/"><img style="width: 500px;" src="ad-02.png"></a> 
+		<a href="https://foodyc.xyz/"><img style="position: absolute; width: 500px; top:50%; margin-left: 50%; transform: translate(-50%,-50%);" src="ad-02.png"></a> 
 	</div>
 
 </body>
