--- a/mail.html
+++ b/mail.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div>
-		<a href="https://foodyc.xyz/"><img style="width: 500px;" src="ad-02.png"></a> 
+		<a href="https://foodyc.xyz/"><img style="position: absolute; width: 500px; top:50%; margin-left: 50%; transform: translate(-50%,-50%);" src="ad-02.png"></a> 
 	</div>
 
 </body>
