--- a/chart.html
+++ b/chart.html
@@ -23,6 +23,35 @@
 			<div>
 			<a style="text-decoration: none; color: #e5697e;" href="https://foodyc.xyz/Contests"><p  style="font-family: 'Alata', sans-serif; text-align: center;">VOTING PORTAL</p></a>
 	</div>
+	<div style="font-family: 'Alata', sans-serif; text-align: center;">
+			<p style="font-size: 1.3vw;">Contest: <em>Category2: Maximum Vote</em></p>
+		    <p style="font-size: 2vw; text-align: center;"> <b>Participants</b> </p>
+	</div>
+	<div style="text-align: center; font-size: 1.2vw">
+			
+			<p> Debsmita Das <em>#44424d</em> <br>
+				Priyanka dhibar <em>#506462</em> <br>
+				Avijit Bairagi <em>#417662</em> <br>
+				Sangita Saha <em>#536774</em> <br>
+				Diptesh Saha <em>#647074</em> <br>
+				Soumita sinha roy <em>#534d54</em> <br>
+				Renia <em>#526E65</em> <br>
+				Sudipta Chakrabarti <em>#D5672E</em> <br>
+				Nisha dey <em>#14ST6E</em> <br>
+				Nisha dey <em>#14ST6E</em> <br>
+				Samadri Santra <em>#SMT58</em> <br><br>
+			</p>
+			<p>
+				For More Details Visit Our Website
+			</p>
+		</div>
+
+<div>
+	<center>
+	<a href="http://foodyc.xyz/"> <img style="width: 60%;" src="site.png"></a>
+	</center>
+</div>
+
 	
 		
 
