--- a/chart.html
+++ b/chart.html
@@ -27,7 +27,7 @@
 			<p style="font-size: 1.3vw;">Contest: <em>Category2: Maximum Vote</em></p>
 		    <p style="font-size: 2vw; text-align: center;"> <b>Participants</b> </p>
 	</div>
-	<div style="text-align: center; font-size: 1.2vw">
+	<div style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw">
 			
 			<p> Debsmita Das <em>#44424d</em> <br>
 				Priyanka dhibar <em>#506462</em> <br>
@@ -48,7 +48,7 @@
 
 <div>
 	<center>
-	<a href="http://foodyc.xyz/"> <img style="width: 60%;" src="site.png"></a>
+	<a href="http://foodyc.xyz/"> <img style="width: 55%;" src="site.png"></a>
 	</center>
 </div>
 
