--- a/chart.html
+++ b/chart.html
@@ -11,7 +11,7 @@
 	<div>
 		<h1 style="font-family: 'Alata', sans-serif; text-align: center;">foodyC Winter Contest</h1>
 		<h2 style="font-family: 'Alata', sans-serif; text-align: center;">Category 2 Maximum Vote</h2>
-		<h3 style="font-family: 'Alata', sans-serif; text-align: center;">LIVE RESULT (updates each 30 mins)</h3>
+		<h3 style="font-family: 'Alata', sans-serif; text-align: center;">LIVE RESULT (updates every 5 mins)</h3>
 	</div>
 	<div>
 		<center>
