--- a/chart.html
+++ b/chart.html
@@ -10,8 +10,8 @@
 <body background="bg.jpg">
 	<div>
 		<h1 style="font-family: 'Alata', sans-serif; text-align: center;">foodyC Winter Contest</h1>
-		<h2 style="font-family: 'Alata', sans-serif; text-align: center;">Category 2 Maximum Vote</h2>
-		<h3 style="font-family: 'Alata', sans-serif; text-align: center;">LIVE RESULT (updates every 5 mins)</h3>
+		<h2 style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.5vw;">Category 2 Maximum Vote</h2>
+		<h3 style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw;">LIVE RESULT (updates every 5 mins)</h3>
 	</div>
 	<div>
 		<center>
@@ -19,7 +19,7 @@
 		</center>
 	</div>
 	<div>
-			<p style="font-family: 'Alata', sans-serif; text-align: center;">The Voting Will Coninue till 2nd January, 2020</p>
+			<p style="font-family: 'Alata', sans-serif; text-align: center; font-size: 0.8vw;">The Voting Will Coninue till 2nd January, 2020</p>
 			<div>
 			<a style="text-decoration: none; color: #e5697e;" href="https://foodyc.xyz/Contests"><p  style="font-family: 'Alata', sans-serif; text-align: center;">VOTING PORTAL</p></a>
 	</div>
