--- a/chart.html
+++ b/chart.html
@@ -1,34 +1,141 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>foodyC Winter Contest</title>
 	<link rel="stylesheet" type="text/css" href="chart.css">
 	<link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 	<link rel="icon" href="imge-08.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="404.css">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+	<meta charset="utf-8">
+	<meta name="description" content="The Consolidated results for foodyC Winter Contest Category 2 Maximum Votes."/>
+	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+	<meta name="author" content="Foody Couple.">
 </head>
+
 <body background="bg.jpg">
 	<div>
 		<h1 style="font-family: 'Alata', sans-serif; text-align: center;">foodyC Winter Contest</h1>
 		<h2 style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.5vw;">Category 2 Maximum Vote</h2>
-		<h3 style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw;">LIVE RESULT (updates every 5 mins)</h3>
+		<h3 style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw;">Final Consolidated Result
+		</h3>
 	</div>
+
+
+
+	<div>
+		<table id="tble">
+			<tr>
+				<th>NAME</th>
+				<th>VOTE</th>
+				<th>% of VOTE</th>
+			</tr>
+			<tr>
+				<td>Soumita Sinha Roy
+				</td>
+				<td>64</td>
+				<td>34.9726776%</td>
+			</tr>
+			<tr>
+				<td>Debsmita Das
+				</td>
+				<td>50</td>
+				<td>27.32240437%</td>
+			</tr>
+			<tr>
+				<td>Diptesh Saha
+				</td>
+				<td>38</td>
+				<td>20.76502732%</td>
+			</tr>
+			<tr>
+				<td>Sangita Saha
+				</td>
+				<td>18</td>
+				<td>9.836065574%</td>
+			</tr>
+			<tr>
+				<td>Priyanka dhibar
+				</td>
+				<td>9</td>
+				<td>4.918032787%</td>
+			</tr>
+			<tr>
+				<td>Renia
+				</td>
+				<td>1</td>
+				<td>0.546448087%</td>
+			</tr>
+			<tr>
+				<td>Avijit Bairagi
+				</td>
+				<td>0</td>
+				<td>0%</td>
+			</tr>
+			<tr>
+				<td>Sudipta Chakrabarti
+				</td>
+				<td>0</td>
+				<td>0%</td>
+			</tr>
+			<tr>
+				<td>Nisha dey
+				</td>
+				<td>0</td>
+				<td>0%</td>
+			</tr>
+			<tr>
+				<td>Shree Mukherjee
+				</td>
+				<td>0</td>
+				<td>0%</td>
+			</tr>
+			<tr>
+				<td>Samadri Santra
+				</td>
+				<td>0</td>
+				<td>0%</td>
+			</tr>
+			<tr>
+				<td>NOTA
+				</td>
+				<td>3</td>
+				<td>1.639344262%</td>
+			</tr>
+			<tr>
+				<td><b>TOTAL</b> 
+				</td>
+				<td colspan="2"><b>183</b></td>
+			</tr>
+
+		</table>
+	</div>
+
+
 	<div>
 		<center>
-		<iframe width=650 height=400 frameBorder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR85YMARTOqjM0g4N9cJieLKUYIj8FjI_zrfJB9IvD1RzxEWEy0lHKxMFQgTWnPo4OBPLVAoOR_0w8R/pubchart?oid=468846732&format=interactive"></iframe>
+			<iframe width=650 height=400 frameBorder="0"
+				src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR85YMARTOqjM0g4N9cJieLKUYIj8FjI_zrfJB9IvD1RzxEWEy0lHKxMFQgTWnPo4OBPLVAoOR_0w8R/pubchart?oid=468846732&format=interactive"></iframe>
 		</center>
 	</div>
+
+
+
 	<div>
-			<p style="font-family: 'Alata', sans-serif; text-align: center; font-size: 0.8vw;">The Voting Will Coninue till 2nd January, 2020</p>
-			<div>
-			<a style="text-decoration: none; color: #e5697e;" href="https://foodyc.xyz/Contests"><p  style="font-family: 'Alata', sans-serif; text-align: center;">VOTING PORTAL</p></a>
-	</div>
-	<div style="font-family: 'Alata', sans-serif; text-align: center;">
+		<p style="font-family: 'Alata', sans-serif; text-align: center; font-size: 0.8vw;">The Voting has ended on 2nd
+			January, 2020 <br> See Clause 5B on our Policies Page for More informations. </p>
+		<div>
+			<a style="text-decoration: none; color: #e5697e;" href="https://foodyc.xyz/Contests">
+				<p style="font-family: 'Alata', sans-serif; text-align: center;">VOTING PORTAL</p>
+			</a>
+		</div>
+		<div style="font-family: 'Alata', sans-serif; text-align: center;">
 			<p style="font-size: 1.3vw;">Contest: <em>Category2: Maximum Vote</em></p>
-		    <p style="font-size: 2vw; text-align: center;"> <b>Participants</b> </p>
-	</div>
-	<div style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw">
-			
+			<p style="font-size: 2vw; text-align: center;"> <b>Participants</b> </p>
+		</div>
+		<div style="font-family: 'Alata', sans-serif; text-align: center; font-size: 1.2vw">
+
 			<p> Debsmita Das <em>#44424d</em> <br>
 				Priyanka dhibar <em>#506462</em> <br>
 				Avijit Bairagi <em>#417662</em> <br>
@@ -45,15 +152,41 @@
 				For More Details Visit Our Website
 			</p>
 		</div>
-
-<div>
-	<center>
-	<a href="http://foodyc.xyz/"> <img style="width: 55%;" src="site.png"></a>
-	</center>
+<div style="font-family: 'Alata', sans-serif; text-align: center; color: #41e7fb;">
+	<p style="font-size: 20px;"><em>And The Winner Is</em></p>
+	<p style="font-size: 25px;"><em>Soumita Sinha Roy</em></p>
+	<table id="tble">
+		<tr>
+			<th>No of Votes</th>
+			<th>Total Margin</th>
+			<th>Margin of Votes</th>
+			<th>% of Votes</th>
+		</tr>
+		<tr>
+			<td>60</td>
+			<td>14</td>
+			<td>4.180477172%</td>
+			<td>34.9726776%</td>
+		</tr>
+	</table>
 </div>
 
-	
-		
+		<div class="btnf" style="font-family: 'Alata', sans-serif; text-align: center; font-size: 20px">
+			<a style="text-decoration: none;color: black;" target="_blank" href="Results.htm"><p class="btn">Complete Result</p></a>
+			<a style="text-decoration: none;color: black;" target="_blank" href="Voters.htm"><p class="btn">Voters' Details</p></a>
+		</div>
 
+
+
+<div class="mainC">
+	<p style="font-family: 'Alata', sans-serif; text-align: center;">This Page anad all its' contetnts will be available for not more than two days. All the personal informations of the voters except name is masked due to security reasons. And Co-related chart of Voters and votes will not be available at any cause. (Clause 5B).</p>
+</div>
+
+		<div style="position: absolute;">
+			<center>
+				<a href="http://foodyc.xyz/"> <img style="width: 55%;" src="site.png"></a>
+			</center>
+		</div>
 </body>
+
 </html>
