--- a/Voters.htm
+++ b/Voters.htm
@@ -254,8 +254,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>a**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Animesh Koley<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Animesh Koley</td>
   <td class=xl6930216>a**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -267,8 +266,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>b**********y@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Anitesh<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Anitesh</td>
   <td class=xl6930216>b**********rint@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -348,8 +346,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>a**********5@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Atri Banerjee<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Atri Banerjee</td>
   <td class=xl6930216>b**********ri@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -377,8 +374,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>C**********0thjune@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Chiranjit Santra<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Chiranjit Santra</td>
   <td class=xl6930216>b**********1989@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -418,8 +414,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>c**********06@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Debsmita Das<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Debsmita Das</td>
   <td class=xl6930216>s**********ygoogly@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -491,8 +486,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>i**********gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Jeet Sarkar<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Jeet Sarkar</td>
   <td class=xl6930216>S**********53@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -508,8 +502,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>K**********abasi@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Kaustav<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Kaustav</td>
   <td class=xl6930216>k**********64@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -529,8 +522,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>k**********ee6653@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>liza<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>liza</td>
   <td class=xl6930216>p**********8030@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -578,8 +570,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>h**********nawaz881@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Mousam Mukherjee<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Mousam Mukherjee</td>
   <td class=xl6930216>m**********gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -591,8 +582,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>m**********k141@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Naitik kothari<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Naitik kothari</td>
   <td class=xl6930216>n**********ri98@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -612,13 +602,11 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>p**********5@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>PRITHA BANERJEE<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>PRITHA BANERJEE</td>
   <td class=xl6930216>p**********jee1997@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Prity routh<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Prity routh</td>
   <td class=xl6930216>P**********34@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -650,8 +638,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>r**********2000@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Rajarshi sinhaRoy<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Rajarshi sinhaRoy</td>
   <td class=xl6930216>r**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -663,13 +650,11 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>r**********dar97@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Rima Banerjee<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Rima Banerjee</td>
   <td class=xl6930216>b**********a2001@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Rina dhibar<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Rina dhibar</td>
   <td class=xl6930216>r**********004@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -681,8 +666,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>r**********gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Ritoshree Naskar<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Ritoshree Naskar</td>
   <td class=xl6930216>r**********6@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -726,8 +710,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>c**********991@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>sangita<span
-  style='mso-spacerun:yes'>  </span>saha</td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>sangita saha</td>
   <td class=xl6930216>s**********kar16@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -755,8 +738,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>d**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>SAYANTAN PRAMANIK<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>SAYANTAN PRAMANIK</td>
   <td class=xl6930216>r**********an2015@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -764,8 +746,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>a**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>SHIBA SAHA<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>SHIBA SAHA</td>
   <td class=xl6930216>s**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -773,8 +754,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>s**********kar2014@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Shiny Majumder<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Shiny Majumder</td>
   <td class=xl6930216>s**********der12@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -798,8 +778,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>s**********@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Silpa Manna<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Silpa Manna</td>
   <td class=xl6930216>s**********8@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -851,8 +830,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>s**********gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Soumyakanti Das<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Soumyakanti Das</td>
   <td class=xl6930216>t**********electrical.skd@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -868,8 +846,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>s**********makar5@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Subhajit Mondal<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Subhajit Mondal</td>
   <td class=xl6930216>s**********dal9042@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -937,8 +914,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>t**********989@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Tanusree Bose<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Tanusree Bose</td>
   <td class=xl6930216>t**********gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
@@ -962,9 +938,7 @@ font-style:normal'>Voters</h1>
   <td class=xl6930216>t**********002@gmail.com</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
-  <td height=17 class=xl6830216 style='height:12.75pt'>Trishita<span
-  style='mso-spacerun:yes'>  </span>Naskar<span
-  style='mso-spacerun:yes'> </span></td>
+  <td height=17 class=xl6830216 style='height:12.75pt'>Trishita Naskar</td>
   <td class=xl6930216>t**********kar@gmail.com</td>
  </tr>
  <![if supportMisalignedColumns]>
