--- a/chart.html
+++ b/chart.html
@@ -152,7 +152,7 @@
 				For More Details Visit Our Website
 			</p>
 		</div>
-<div style="font-family: 'Alata', sans-serif; text-align: center; color: #41e7fb;">
+<div style="font-family: 'Alata', sans-serif; text-align: center;">
 	<p style="font-size: 20px;"><em>And The Winner Is</em></p>
 	<p style="font-size: 25px;"><em>Soumita Sinha Roy</em></p>
 	<table id="tble">
