--- a/chart.html
+++ b/chart.html
@@ -156,6 +156,7 @@
 	<p style="font-size: 20px;"><em>And The Winner Is</em></p>
 	<p style="font-size: 25px;"><em>Soumita Sinha Roy</em></p>
 	<table id="tble">
+	<p style="font-size: 10px;"><b><em>Her Voting Details at a glance</b></em></p>	
 		<tr>
 			<th>No of Votes</th>
 			<th>Total Margin</th>
@@ -179,7 +180,7 @@
 
 
 <div class="mainC">
-	<p style="font-family: 'Alata', sans-serif; text-align: center;">This Page anad all its' contetnts will be available for not more than two days. All the personal informations of the voters except name is masked due to security reasons. And Co-related chart of Voters and votes will not be available at any cause. (Clause 5B).</p>
+	<p style="font-family: 'Alata', sans-serif; text-align: center;">This Page and all its' contetnts will be available for not more than two days. All the personal informations of the voters except name is masked due to security reasons. And Co-related chart of Voters and votes will not be available at any cause. (Clause 5B).</p>
 </div>
 
 		<div style="position: absolute;">
