--- a/Voters.htm
+++ b/Voters.htm
@@ -202,7 +202,7 @@ font-style:normal'>Voters</h1>
  <col width=240 style='mso-width-source:userset;mso-width-alt:8777;width:180pt'>
  <tr height=24 style='height:18.0pt'>
   <td height=24 class=xl6530216 colspan=2 width=505 style='height:18.0pt;
-  width:379pt'>foodyC Winter Contest Max Vote, Votesrs</td>
+  width:379pt'>foodyC Winter Contest Max Vote, Voters</td>
  </tr>
  <tr height=17 style='height:12.75pt'>
   <td height=17 class=xl6630216 style='height:12.75pt'>e-mail informations
